# Hexagonal-Lattice-Generator

./: .gitignore  LatGenV1_Hexagon.py  LatticeGenV2.py  LatticeGenV2_Checkpoint.py  LatticeGen_Funcs.py  README.md  T_R_Greenway_Hexagon.py  T_R_Greenway_Parallelogram.py  functions.py  nonregular.py  pyproject.toml  setup.py  test.py
.github/workflows/: pypi-deployment.yaml
in_progress/: nonregular.py
polylatlib/: __init__.py  classes.py  exception.py
polylatlib/classes/: __init__.py  base_shapes.py  factorys.py  nonregular.py  regular.py
src/polylatlib/: __init__.py  exception.py  functions.py
src/polylatlib/classes/: __init__.py  base_shapes.py  nonregular.py  regular.py
test/: test.py
