[tool.poetry]
name = "polylatlib"
version = "1.0.0"
description = "Python library providing the functionality to generate, work with, view, and manipulate polygons and their lattices in the 2D space."
authors = ["Rex Greenway <rexgreenway@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"